# pjsiptcl

./: Makefile.in  README.txt  SimpleSIPPhone.tcl  configure  configure.in  pjsip-test-commands.txt  pjsipua.c
pjsiptcl.xcodeproj/: antonio.mode1  antonio.pbxuser  project.pbxproj
